--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ http://www.layoutit.com/
 <br>구현 방법에 제약은 없다.
 <br>누구든 개발 할 수 있다.
 <br>
-<br>오늘은 개발하기 좋은날
+<br>http://www.makeduck.com
+<br>"오늘은 개발하기 좋은날"
+<br>
 <br>
 </body>
 </html>
