--- a/index.html
+++ b/index.html
@@ -16,29 +16,25 @@
 http://www.layoutit.com/
 
 <br>
-<br>개발자
-<br>덕 이되다.
 <br>
-<br>1. 후덕 덕을 쌓다.
-<br>2. 개발 집단
-<br>3. 개발 덕후 모임
+<br>개덕.[開德]
+<br>1. 소셜 개발 집단
+<br>2. 개발로 덕을 쌓다
 <br>
-<br>개.덕. 開 德
-<br>스타트업 프로모션 개발 조직
-<br>제안된 안을 빠르게 구현시켜 가시화 한다.
-<br>가시화 하여 구현시킨다.
-<br>공공, 사회 공헌, 프로토타입. 해커톤 단기 개발.
+<br>개발자 덕후 모임(X)
 <br>개떡 같은 프로그램 만드는 곳(X)
-<br>off 모임은 커뮤니티 행사, 컨퍼런스를 통하여 한다.
-<br>소셜개발그룹
 <br>
-<br>makeduck.github.io
+<br>- 프로토타입이 필요한 그룹에게 개발 지원
+<br>- 누구든 제안서를 낼 수 있다.
+<br>- 빠르게 구현/실체화를 목적으로 한다.
+<br>- 개발 방법은 수단과 방법을 가리지 않는다.
+<br>- 코드는 오픈한다 https://github.com/makeduck
+<br>- off 모임은 커뮤니티 행사, 컨퍼런스를 빌어서 한다.
+<br>
+<br>tag
+<br>공공, 사회 공헌, 프로토타입. 해커톤 단기 개발.
+<br>
 <br>www.makeduck.com
-<br>
-<br>코드는 오픈한다.
-<br>명세는 어떤 형태로도 좋다
-<br>구현 방법에 제약은 없다.
-<br>누구든 개발 할 수 있다.
 <br>
 <br>http://www.makeduck.com
 <br>"오늘은 개발하기 좋은날"
