--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ http://www.layoutit.com/
 <br>tag
 <br>공공, 사회 공헌, 프로토타입. 해커톤 단기 개발.
 <br>
-<br>www.makeduck.com
+<br>makeduck.github.io
 <br>
 <br>http://www.makeduck.com
 <br>"오늘은 개발하기 좋은날"
