--- a/line2/index.html
+++ b/line2/index.html
@@ -6,12 +6,12 @@
 <body>
 
 
-dev art site
-
-line 2
-
-Invisible now, the world of these intertwined relationships tie nicely drawn kkeundeul also want to be able to scribble
-
-
+<br> dev art site
+<br>
+<br>line 2
+<br>
+<br>Invisible now, the world of these intertwined relationships tie nicely drawn kkeundeul also want to be able to scribble
+<br>
+<br>
 </body>
 </html>
