--- a/line2/index.html
+++ b/line2/index.html
@@ -13,9 +13,9 @@
 <br>Invisible now, the world of these intertwined relationships tie nicely drawn kkeundeul also want to be able to scribble
 <br>
 <br>
-<br>https://github.com/dubu/devart-template/blob/master/project_summary.md
+<br> <a href ="https://github.com/dubu/devart-template/blob/master/project_summary.md"> page01</a>
 <br>
-<br>https://github.com/dubu/devart-template/blob/master/project_posts/2014-03-22-Post01.md
+<br> <a href ="https://github.com/dubu/devart-template/blob/master/project_posts/2014-03-22-Post01.md"> page02 </a>
 <br>
 </body>
 </html>
