내 냉장고를 부탁해

--- a/moo/coldbox.html
+++ b/moo/coldbox.html
@@ -26,7 +26,7 @@
 <script>
     //    jQuery("#in").keypress(function(event )console.log(event.keyCode));
 
-    var itemList = ["라면" , "떡복이" ,"고기" ,"햄" ,'만두'];
+    var itemList = ["라면" , "떡볶이" ,"고기" ,"햄" ,'만두'];
 
     var f1 = {id : 0, item:[0] ,  desc:"[라면] 라면을 맛나게 끊여서 먹습니다. 조리법은 봉지뒷면 참조"};
     var f2 = {id : 1, item:[1] ,  desc:"[떡구이] 떡을 구어서 익혀 먹습니다."};
