--- a/moo/coldbox.html
+++ b/moo/coldbox.html
@@ -10,7 +10,10 @@
 <script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-[냉장고를 부탁해]
+<pre>
+내 냉장고를 부탁해
+기획-무, 개발-뚜
+</pre>
 <br>
 <br>
 <br>
